--- a/client/src/components/Main.css
+++ b/client/src/components/Main.css
@@ -72,26 +72,26 @@
   .box p {
     margin: 5px 0 0;
     font-size: 18px;
-    text-align: center; /* 텍스트 중앙 정렬 */
+    text-align: center; 
   }
   
   .arrow {
-    position: absolute; /* 절대 위치 설정 */
-    bottom: 10px; /* 박스 하단에서 10px 떨어짐 */
-    right: 10px; /* 박스 오른쪽에서 10px 떨어짐 */
-    font-size: 14px; /* 화살표 크기 */
-    color: #555; /* 화살표 색상 */
-    background-color: #FBF7EB; /* 회색 동그라미 배경 */
-    border-radius: 50%; /* 동그라미 모양 */
-    width: 24px; /* 동그라미 크기 */
-    height: 24px; /* 동그라미 크기 */
-    display: flex; /* 동그라미 안에 화살표 중앙 정렬 */
+    position: absolute; 
+    bottom: 10px; 
+    right: 10px; 
+    font-size: 14px; 
+    color: #555; 
+    background-color: #FBF7EB; 
+    border-radius: 50%; 
+    width: 24px; 
+    height: 24px; 
+    display: flex; 
     justify-content: center;
     align-items: center;
   }
   
 .logo {
   margin-top: -40px;
-  margin-left: 0px; /* ✅ 왼쪽 끝으로 붙이고 싶으면 0으로 */
-  text-align: left; /* ✅ 왼쪽 정렬로 바꾸면 더 자연스러움 */
+  margin-left: 0px; 
+  text-align: left; 
 }
