--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -65,6 +65,9 @@
   .icon img {
     max-width: 44px; /* 기본 아이콘 크기 */
     max-height: 44px;
+    position: absolute;
+    top: 20%;
+    left: 39%;
   }
   
 
