--- a/client/src/components/Mypage/Mypage.css
+++ b/client/src/components/Mypage/Mypage.css
@@ -95,7 +95,7 @@ body {
   padding: 6px 12px;
   background-color: #5c9dff;
   color: white;
-  margin-bottom: 10px;
+  margin: 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
