--- a/client/src/components/Mypage/Mypage.css
+++ b/client/src/components/Mypage/Mypage.css
@@ -1,45 +1,103 @@
+/* 전체영역 */
 body {
   background-color: #F8F4E8;
 }
 
 .container {
-  width: 100%;
-  height: 900px;
-  max-width: 1400px;
-  min-height: 100vh;
-  margin: 0 auto;
-  box-sizing: border-box;
+    width: 100%;
+    max-width: 1400px;        
+    min-height: 100vh;
+    margin: 0 auto;
+    padding: 40px 24px;
+    box-sizing: border-box;
+}
+
+.main-container{
+    display: flex;
+    gap: 30px;
+    width: 100%;
+}
+
+/* 사이드바 */
+.sidebar {
+    flex: 0 0 280px;    
+    flex-direction: column;
+    min-width: 220px;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+}
+
+.sidebar-item {
+    padding: 20px;
+    text-align: center;
+    background-color: white;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.sidebar-item h3 {
+    font-size: 25px;
+}
+
+.sidebar-item p {
+    font-size: 16px;
+    color: #666;
+}
+
+.sidebar-item:hover {
+    background-color: #e0e0e0;
+}
+
+.sidebar-item.active {
+    background-color: #ffd46c;
+    color: white;
 }
 
 /* 컨텐츠 */
+.content-container{
+    flex: 1;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.08);
+    overflow: hidden;
+
+    position: relative;
+    min-width: 0;
+}
+
 .content {
-  flex-grow: 1;
-  padding: 40px;
-  background-color: white;
-  height: 85vh;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  border-radius: 15px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.08);
+  display: none;
+}
+
+.content.active {
+    display: block;
 }
 
 .tab-content {
   display: none;
   flex-grow: 1;
   position: relative;
-  padding-bottom: 50px;
+  margin: 30px 0;
 }
 
 .tab-content.active {
   display: block;
   text-align: center;
+  position: relative;
+  padding-bottom: 100px;
 }
 
 .tab-content table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 10px;
+  margin-top: 50px;
+  font-size: 1.1em;
 }
 
 .tab-content th,
@@ -49,7 +107,7 @@ body {
 }
 
 .tab-content tr {
-  height: 6vh;
+  height: 3vh;
 }
 
 .tab-content tr.clickable-row:hover {
@@ -86,7 +144,7 @@ body {
   padding: 10px 0;
   border-top: 1px solid #ccc;
   background-color: white;
-  margin-top: 0;
+  margin-top: auto;
 }
 
 .pagination button {
@@ -107,25 +165,37 @@ body {
   color: white;
 }
 
-/* 개인정보 */
-.profile-edit-container {
-  padding: 20px;
-  background-color: #fff9e8;
-  width: 60%;
-  margin: 200px auto;
-  border-radius: 50px;
+.diagnosis-list{
+    padding:20px 0;
 }
 
+
+/* 호전상태 */
+.tab-content-chart {
+  display: none;
+  flex-grow: 1;
+  position: relative;
+  margin: 100px 0;
+}
+
+.tab-content-chart.active {
+  display: block;
+  text-align: center;
+}
+
+.emotion-chart {
+    padding: 20px;
+}
+
+/* 개인정보 */
 .form-group {
-  margin: 80px 0;
-  padding: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 #profileForm label {
-  width: 30%;
+ padding: 50px;
   font-weight: bold;
 }
 
