--- a/client/src/components/Mypage/Detail.css
+++ b/client/src/components/Mypage/Detail.css
@@ -1,30 +1,56 @@
-.counseling-detail-date {
+.detail-date {
   text-align: center;
   font-weight: bold;
 }
 
-.counseling-detail-table {
-  width: 100%;
+.detail-table {
+  width: 60%;
+  min-width: 70vh;
+  height: 45vh;
+  max-height: 45vh;
   border-collapse: collapse;
-  margin-bottom: 15px;
+  margin: 0 auto;
 }
 
-/* 테이블 헤더/레이블 셀 */
-.counseling-detail-table td:first-child {
-  width: 20%;
+.detail-table td {
+  max-height: 30vh;
+}
+
+.detail-table td:first-child {
+  width: 15%;
   padding: 8px;
   border: 1px solid #ddd;
   font-weight: bold;
   background-color: #f2f2f2;
 }
 
-.counseling-detail-table td:last-child {
+.detail-table td:last-child {
   width: 80%;
   padding: 8px;
   border: 1px solid #ddd;
+  font-size: 20px;
 }
 
-.counseling-detail-divider {
+.detail-divider {
   border-top: 1px solid #eee;
-  margin: 15px 0;
+  margin: 50px 0;
+}
+
+/* 목록보기(뒤로가기) */
+.back-button {
+  position: absolute;
+  bottom: 0;
+  left: 50;
+  padding: 6px 12px;
+  background-color: #ffd46c;
+  color: white;
+  margin: 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.back-button:hover {
+  background-color: #c7c7c7;
 }
